<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityLogIn">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/tx1L2"
        android:textColor="@color/tx1L2"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/la1L2"
        android:layout_width="409dp"
        android:layout_height="390dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.053">

        <TextView
            android:id="@+id/tx2L2L1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/tx2L2L1"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/txPl1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/tx2Pl1"
            android:inputType="text"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tx2L2L1"
            app:layout_constraintTop_toBottomOf="@+id/tx2L2L1" />

        <EditText
            android:id="@+id/txPl2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/tx2Pl2"
            android:inputType="text"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="@+id/txPl1"
            app:layout_constraintStart_toStartOf="@+id/txPl1"
            app:layout_constraintTop_toBottomOf="@+id/txPl1" />

        <EditText
            android:id="@+id/txPl3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/tx2Pl3"
            android:inputType="text"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="@+id/txPl2"
            app:layout_constraintStart_toStartOf="@+id/txPl2"
            app:layout_constraintTop_toBottomOf="@+id/txPl2" />

        <EditText
            android:id="@+id/txPl4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/tx2Pl4"
            android:inputType="number"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="@+id/txPl3"
            app:layout_constraintStart_toStartOf="@+id/txPl3"
            app:layout_constraintTop_toBottomOf="@+id/txPl3" />

        <Button
            android:id="@+id/bt1L2L1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="resultDataInMainActivity"
            android:text="@string/bt1L2L1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txPl4"
            app:layout_constraintVertical_bias="0.110000014" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/la2L2"
        android:layout_width="0dp"
        android:layout_height="316dp"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.093">

        <EditText
            android:id="@+id/tx1Pl2L2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/tx1Pl2l2"
            android:inputType="text"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/tx2Pl2l2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/tx2Pl2l2"
            android:inputType="text"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="@+id/tx1Pl2L2"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tx1Pl2L2"
            app:layout_constraintTop_toBottomOf="@+id/tx1Pl2L2" />

        <Button
            android:id="@+id/bt1L2L2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/bt1L2L2"
            app:layout_constraintEnd_toEndOf="@+id/tx2Pl2l2"
            app:layout_constraintStart_toStartOf="@+id/tx2Pl2l2"
            app:layout_constraintTop_toBottomOf="@+id/tx2Pl2l2" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>